clusters/management-hub/plex/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: plex-real-ip
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
      X-Real-Ip: ""
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.nwlnexus.io`)
      kind: Rule
      middlewares:
        - name: plex-real-ip
      services:
        - name: plex-styx
          port: 32400
  tls:
    secretName: plex-tls
